cluster/apps/bitwarden/bitwarden-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
        name: bitwarden
      annotations:
        configmap.reloader.stakater.com/reload: "bitwarden-config"
    spec:
      nodeSelector:
        node-type: worker
      serviceAccountName: bitwarden
      containers:
      - name: bitwarden
        image: vaultwarden/server:1.23
        imagePullPolicy: IfNotPresent
        # env:
        # - name: ADMIN_TOKEN
        #   valueFrom:
        #     secretKeyRef:
        #       name: bitwarden-admin-token
        #       key: token
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: websocket
          containerPort: 3012
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
          - name: bitwarden-data
            mountPath: /data
      volumes:
        - name: bitwarden-data
          persistentVolumeClaim:
            claimName: bitwarden-data-pvc
