cluster/apps/bitwarden/bitwarden-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  namespace: bitwarden
  labels:
    app: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: websocket
    port: 3012
    protocol: TCP
    targetPort: 3012
  sessionAffinity: None
  type: ClusterIP
