cluster/apps/bitwarden/bitwarden-ingressroute.yaml
# bitwarden-local-ingressroute
# bitwarden-http-ingressroute
# bitwarden-https-ingressroute
# bitwarden-middleware-redirect-scheme

# bitwarden-middleware-headers

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-local-ingressroute
  namespace: bitwarden
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bitwarden.${SECRET_DOMAIN_LOCAL_02}`)
      kind: Rule
      services:
        - name: bitwarden
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-http-ingressroute
  namespace: bitwarden
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bitwarden.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: bitwarden-middleware-redirect-scheme
      services:
        - name: bitwarden
          port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-https-ingressroute
  namespace: bitwarden
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-production-do"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bitwarden.${SECRET_DIGITALOCEAN_DOMAIN_02}`)
      kind: Rule
      middlewares:
        - name: bitwarden-middleware-headers
      services:
        - name: bitwarden
          port: 80
    - match: Host(`bitwarden.${SECRET_DIGITALOCEAN_DOMAIN_02}`) && Path(`/notifications/hub`)
      kind: Rule
      services:
        - name: bitwarden
          port: 3012
  tls:
    secretName: bitwarden-letsencrypt-production-certificate

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: bitwarden-middleware-redirect-scheme
  namespace: bitwarden
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: bitwarden-middleware-headers
  namespace: bitwarden
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
    sslRedirect: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
    # stsSeconds: 63072000
    contentSecurityPolicy: |
      default-src 'none';form-action 'none';frame-ancestors 'none';base-uri 'none'
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowOriginList:
      - "https://bitwarden.${SECRET_DIGITALOCEAN_DOMAIN_02}"
    accessControlMaxAge: 100
    addVaryHeader: true
    referrerPolicy: "same-origin"
    customFrameOptionsValue: SAMEORIGIN
